--- a/style/header.css
+++ b/style/header.css
@@ -12,7 +12,9 @@
     background: var(--primary-color);
     z-index: -1;
 }
-
+li {
+    list-style: none;
+}
 .header__logo {
     width: 13rem;
 }
